# PinkPanther

./: 99-dynamixelsdk-usb.rules  LICENSE  README.md
Apriltag/: apriltag_view.py  cam_display.py
Apriltag/apriltag-master/: CMakeCache.txt  Makefile  apriltagTargets.cmake  apriltag_demo  cmake_install.cmake
CML/Network Control/: 13_04_Test.py  Documentation.rtf  commanded_pos.csv  floor_data.csv  gait_v1_check_data.csv  gait_v1_check_data.xlsx  main_server.py  main_server_nocam.py  main_server_test.py  platform_data.csv  plotter.py  real_pos.csv  test_functions.py
CML/Sim2Real Control/: Errors.csv  Errors_standcsv  WALK.py  WALK_lx16a_vs_ctypes.py  WALK_text.py  errors.py  test.py  test_movement.py
CML/Simulation Control/: PinkPantherEnv.py  find_gait.py  load_urdf.py  test.py  (+1 more)
Camera/: camera_test.py
Control/: Angles.py  Conversion.py  LIMIT_changer.py  MOTOR_SETTER.py  PLAS.py  STAND.py  STAND_1.0.py  STAND_2.0.py  STAND_UP.py  STAND_test.py  STAND_tester.py  TEST_0.0.py  TEST_0.1.py  TestGait_0.0.0.py  UP.py  WALK_0.0.py  WALK_1.0.py  WALK_2.0.py  WALK_2.0_2.py  WALK_tester.py  change.py  helloWorld.py
Networks/: py2c.py
Robot/Leg_Test/: CMakeLists.txt  package.xml
Robot/Leg_Test/config/: joint_names_Leg_Test.yaml
Robot/Leg_Test/launch/: display.launch  gazebo.launch
Robot/Leg_Test/meshes/: third_link.STL
Robot/Leg_Test/urdf/: Leg_Test.csv  Leg_Test.urdf
SIMULATION_EXAMPLE/: PinkPantherEnv.py  position_tester.py
SenseHat/: hat_test.py  rpy_display.py  rpy_test.py
lx16a_ctypes2.0/: README.txt  ServoMotor.py  USBLATENCY.txt  Voltage.py
(+469 files in other folders)
